# InputTransfer

./: README.md  cmake_install.bat  install.bat  install.sh
Clients/Alphabet/: C.py  E.py  F.py  I.py  K.py  M.py  P.py  Q.py  R.py  S.py  U.py  W.py  X.py  Y.py  Z.py  a.py  b.py  c.py  d.py  e.py  f.py  g.py  h.py  j.py  l.py  n.py  o.py  p.py  q.py  v.py  x.py  z.py
Clients/Keyboard/: a.py  b.py  d.py  g.py  i.py  j.py  k.py  l.py  m.py  n.py  r.py  s.py  u.py  w.py  y.py
Clients/Keyboard/Groupings/: wasd.py
Clients/Mouse/: CursorX.py  CursorY.py  cursor.py  cursorX.py  cursorY.py  scroll.py
Environment/: pyvenv.cfg
Host/: Host.py
Host/Subhosts/Alphabet/: C.py  E.py  G.py  H.py  I.py  J.py  K.py  R.py  T.py  V.py  W.py  X.py  Y.py  Z.py  a.py  b.py  d.py  f.py  l.py  m.py  n.py  o.py  p.py  q.py  s.py  u.py
Host/Subhosts/Mouse/: CursorX.py  CursorY.py  cursor.py  cursorX.py  cursorY.py  scroll.py
src/clients/singular/linux/mouse/: cursor  cursor.cpp
src/clients/singular/win/: sendMouseData.hpp  sendMouseDataWin.hpp
src/clients/singular/win/keyboard/: sendKey.hpp
src/clients/singular/win/keyboard/alphanumeric/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp  l.cpp  m.cpp  n.cpp  o.cpp  p.cpp  q.cpp  r.cpp  s.cpp  t.cpp  u.cpp  v.cpp  w.cpp  x.cpp  y.cpp  z.cpp
src/clients/singular/win/keyboard/functional/: caps.cpp  delete.cpp  down.cpp  left.cpp  right.cpp  shift.cpp  up.cpp
src/clients/singular/win/mouse/: cursor.cpp  sendMouseData.hpp
src/hosts/linux/singular/mouse/: cursor.cpp
src/hosts/win/: master.cpp
src/hosts/win/keyboard/alphanumeric/: w.cpp
src/hosts/win/mouse/: cursor.cpp
src/hosts/win/singular/keyboard/alphanumeric/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp
src/hosts/win/singular/mouse/: cursor.cpp
src/linux/: CMakeLists.txt
src/main/host/: x11
src/main/host/linux/: x11.cpp
src/main/host/unix/: x11  x11.cpp
src/net_test/: client_test.cpp  host_test.cpp
src/net_test/linux/: client_test.cpp  host_test  host_test.cpp
src/net_test/unix/: client_test  client_test.cpp  host_test  host_test.cpp
src/net_test/win/: client_test.cpp  host_test.cpp
src/win/: CMakeLists.txt
